fixed navbar layout on small mobile devices, and added check to ensure the updated names arent blank

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -46,3 +46,9 @@
     }
   }
 }
+
+@media only screen and (max-width: 668px) {
+  .navbar_anchors a:nth-child(1n + 0) {
+    padding-left: 1em;
+  }
+}
