--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -64,6 +64,12 @@
   color: #52a27e;
 }
 
+@media only screen and (max-width: 668px) {
+  .navbar_anchors a:nth-child(1n + 0) {
+    padding-left: 1em;
+  }
+}
+
 .groups_container {
   margin: 0 auto;
   margin-top: 4em;
